MBDyn 1.X-Devel
	Enhancements:
		- added screw joint (Mauro Manetti & Marco Morandini)
		- added discrete filter drive caller
		- added drive caller constitutive law wrapper
	Backward compatibility issues:
	Known issues:
	Bug fixes:
		- fix TotalPinJoint assembly (Eduardo Okabe)
		- fix eigenanalysis before derivatives
		- fix initialization (Reinhard Resch)
		- fix one-time leak in axial wrapper

MBDyn 1.7.3
	Enhancements:
		- added network byte order to drivers & element output streams
		- added width/format for eigenanalysis output files
		  (noted by Reinhard Resch)
		- added relative output of follower force/couple
		- refactored communication code (stream drivers and output
		  elements) to support user-defined communicators (Luca Conti
		  for GSoC 2017)
		- added module-flightgear (Luca Conti for GSoC 2017)
		- added automatic derivatives coefficient estimation
		  (Reinhard Resch)
	Backward compatibility issues:
		- got rid of adams and motionview output support
		- deprecated "drees 2" rotor inflow model (identical to
		  "dreese")
	Known issues:
	Bug fixes:
		- fixed (harmless?) off-by-one read in fixed step drive
		- fixed bugs in timestep control (Reinhard Resch)
		- fixed default max time step (Reinard Resch)
		- fixed build without libmbc (noted by Richard Crozier)
		- fixed test if residual is NaN (Reinard Resch)
		- fixed error message in strext (Richard Crozier)
		- fixed typos and strengthened rotor inflow models

MBDyn 1.7.2
	Enhancements:
		- added contrib/Post (Marco Morandini)
		- added python input file pre-processing (Marco Morandini)
		- added support for Functional Mockup Interface (FMI) model
		  exchange and co-simulation standard (with the contribution
		  of Devyesh Tandon during Google Summer of Code 2016)
		- added "raw" variants of buffer drive and output elem
		- added private data to electric motor (Reinhard Resch)
		- added initial current to electric motor (Reinhard Resch)
		- added printing the CPU time used for each iteration