@@ -21,6 +21,7 @@ MBDyn 1.X-Devel
 		- fix eigenanalysis before derivatives
 		- fix initialization (Reinhard Resch)
 		- fix one-time leak in axial wrapper
+		- fix inconsistency in step drive callers docs
 
 MBDyn 1.7.3
 	Enhancements:
